commit ig